Change in abstract
Add GitHub link to this repository

--- a/main.tex
+++ b/main.tex
@@ -60,7 +60,7 @@
 \shipout\hbox{}
 
 \begin{abstract}
-\large{Nel presente documento ho voluto raccogliere i contenuti del corso di \virgolette{Elementi di fisica biomedica-sanitaria}, tenuto nell'ambito del corso di laurea in Fisica dell'Università di Bologna durante l'a.a. 2020/2021. La trattazione degli argomenti contenuti in questa dispensa cerca di essere il più essenziale possibile, a volte eliminando alcune piccole parti da me ritenute \virgolette{eccessive} per una trattazione di questo livello e comunque non indispensabili ai fini del superamento dell'esame, anche con ottimi voti. Allo stesso tempo, con lo scopo di rendere più chiara la spiegazione di alcuni argomenti, gli appunti presi durante le lezioni e i seminari sono stati integrati con informazioni aggiuntive reperite da siti specializzati, libri di testo e tesi di laurea; si tratta comunque di informazioni di base che non necessitano di essere accompagnate da fonte, considerato anche il carattere didattico e interno di questo documento. Le immagini utilizzate sono state reperite nella stragrande maggioranza dei casi dalle diapositive presentate durante le lezioni e in nessun caso sono state realizzate da me.\\
+\large{Nel presente documento ho voluto raccogliere i contenuti del corso di \virgolette{Elementi di fisica biomedica-sanitaria}, tenuto nell'ambito del corso di laurea in Fisica dell'Università di Bologna durante l'a.a. 2020/2021. La trattazione degli argomenti contenuti in questa dispensa cerca di essere il più essenziale possibile, a volte eliminando alcune piccole parti da me ritenute \virgolette{eccessive} per una trattazione di questo livello e comunque non indispensabili ai fini del superamento dell'esame, anche con ottimi voti. Allo stesso tempo, con lo scopo di rendere più chiara la spiegazione di alcuni argomenti, gli appunti presi durante le lezioni e i seminari sono stati integrati con informazioni aggiuntive reperite da siti specializzati, libri di testo e tesi di laurea; si tratta comunque di informazioni di base che non necessitano di essere accompagnate da fonte, considerato anche il carattere didattico e interno di questo documento. Le immagini utilizzate sono state reperite nella stragrande maggioranza dei casi dalle diapositive presentate durante le lezioni e in nessun caso sono state realizzate da me. Il codice usato per generare questo documento è conservato su \textsc{GitHub} alla \textit{repository} \href{https://github.com/sim1-99/medical-physics-notes/tree/main}{\texttt{sim1-99/medical-physics-notes}}.\\
 Spero che il mio lavoro possa tornare utile al lettore di questo scritto.\\
 
 \hspace{350 pt} Simone Chiarella}
